| Summary: | ASTERISK-30163: general: fix minor formatting issues | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-07-27 17:44:45 | Date Closed: | 2022-08-17 11:05:05 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Applications/General |
| Versions: | 18.13.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fix minor formatting issues in a few files, including some coding guideline violations | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-07-27 17:44:51.999-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Asterisk Team (asteriskteam) 2022-07-28 15:47:28.619-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Friendly Automation (friendly-automation) 2022-08-17 11:05:06.698-0500 Change 18943 merged by Friendly Automation: general: Very minor coding guideline fixes. [https://gerrit.asterisk.org/c/asterisk/+/18943|https://gerrit.asterisk.org/c/asterisk/+/18943] By: Friendly Automation (friendly-automation) 2022-08-17 11:05:12.978-0500 Change 18945 merged by Friendly Automation: general: Very minor coding guideline fixes. [https://gerrit.asterisk.org/c/asterisk/+/18945|https://gerrit.asterisk.org/c/asterisk/+/18945] By: Friendly Automation (friendly-automation) 2022-08-17 11:05:22.385-0500 Change 18944 merged by Friendly Automation: general: Very minor coding guideline fixes. [https://gerrit.asterisk.org/c/asterisk/+/18944|https://gerrit.asterisk.org/c/asterisk/+/18944] By: Friendly Automation (friendly-automation) 2022-08-17 11:11:37.602-0500 Change 18885 merged by Joshua Colp: general: Very minor coding guideline fixes. [https://gerrit.asterisk.org/c/asterisk/+/18885|https://gerrit.asterisk.org/c/asterisk/+/18885] By: Friendly Automation (friendly-automation) 2022-08-17 11:12:10.930-0500 Change 18942 merged by Joshua Colp: general: Very minor coding guideline fixes. [https://gerrit.asterisk.org/c/asterisk/+/18942|https://gerrit.asterisk.org/c/asterisk/+/18942] | ||