include/asterisk/strings.h
@@ -1370,7 +1370,6 @@ static force_inline char *ast_str_to_upper(char *str)
  * \return AO2 container for strings
  * \retval NULL if allocation failed
  */
-//struct ao2_container *ast_str_container_alloc_options(enum ao2_container_opts opts, int buckets);
 struct ao2_container *ast_str_container_alloc_options(enum ao2_alloc_opts opts, int buckets);
 
 /*!
