main/strings.c
@@ -197,7 +197,6 @@ static int str_cmp(void *lhs, void *rhs, int flags)
 	return cmp ? 0 : CMP_MATCH;
 }
 
-//struct ao2_container *ast_str_container_alloc_options(enum ao2_container_opts opts, int buckets)
 struct ao2_container *ast_str_container_alloc_options(enum ao2_alloc_opts opts, int buckets)
 {
 	return ao2_container_alloc_hash(opts, 0, buckets, str_hash, str_sort, str_cmp);
